add: 完成网关权限校验

--- a/fakenews-gateway/fakenews-app-gateway/src/main/resources/bootstrap.yml
+++ b/fakenews-gateway/fakenews-app-gateway/src/main/resources/bootstrap.yml
@@ -2,7 +2,7 @@ server:
   port: 21300
 spring:
   application:
-    name: fakenews-user
+    name: fakenews-app-gateway
   cloud:
     nacos:
       discovery:
