--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>fakenews-service</module>
         <module>fakenews-gateway</module>
         <module>fakenews-test</module>
+        <module>fakenews-basic</module>
     </modules>
 
     <!-- 继承Spring boot工程 -->
@@ -192,7 +193,8 @@
                 <groupId>com.alibaba</groupId>
                 <artifactId>fastjson</artifactId>
                 <version>${fastjson.version}</version>
-            </dependency><dependency>
+            </dependency>
+            <dependency>
                 <groupId>com.fasterxml.jackson.dataformat</groupId>
                 <artifactId>jackson-dataformat-cbor</artifactId>
                 <version>${fastjson.dataformat.version}</version>
