--- a/fakenews-feign-api/pom.xml
+++ b/fakenews-feign-api/pom.xml
@@ -25,6 +25,11 @@
             <groupId>com.guochenxu</groupId>
             <artifactId>fakenews-common</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
