add: kafka通知文章上下架

--- a/fakenews-common/pom.xml
+++ b/fakenews-common/pom.xml
@@ -129,5 +129,14 @@
             <version>2.10.5</version>
         </dependency>
 
+        <!-- kafkfa -->
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-clients</artifactId>
+        </dependency>
     </dependencies>
 </project>
